--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   hooks_riverpod: ^2.3.2
   openai_api: ^0.0.4+3
   envied: ^0.3.0
+  logger: ^1.3.0
+  uuid: ^3.0.7
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +55,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   envied_generator: ^0.3.0
   build_runner: ^2.3.3
+  freezed: ^2.3.2
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
