--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   markdown_widget: ^2.1.0
   flutter_math_fork: ^0.7.1
   markdown: ^7.0.2
+  floor: ^1.4.1
+  sqflite: ^2.2.6
+  riverpod_annotation: ^2.0.1
+  go_router: ^6.5.8
+  tiktoken: ^1.0.3
+  collection: ^1.17.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +66,10 @@ dev_dependencies:
   build_runner: ^2.3.3
   freezed: ^2.3.2
   json_serializable: ^6.6.1
+  floor_generator: ^1.4.1
+  riverpod_generator: ^2.1.3
+  custom_lint:
+  riverpod_lint: ^1.1.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
