--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   collection: ^1.17.0
   path_provider: ^2.0.14
   record: ^4.4.4
+  text_to_speech: ^0.2.3
+  flutter_svg: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +84,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
